Add Flight by Admin
