# API/admin_routes.py
@@ -4,28 +4,37 @@ from API import flight_db
 from API import admin_operations
 from functools import wraps
 
-# admin=flight_db["Admin"]
-# admin_session=flight_db['AdminSession']
+admin=flight_db["Admin"]
+admin_session=flight_db['AdminSession']
+flight_details=flight_db["FlightDetails"]
+
 
 # admin=flight_db['Admin']
-admin=admin_operations.Admin(flight_db['Admin'],flight_db["AdminSession"])
+admin=admin_operations.Admin(admin,admin_session,flight_details)
 
-# def admin_middleware(f):
-#     def check_session(*args,**kargs):
-#         try:
-#             key=request.headers['key']
-#         except:
-#             return {"Error":"Missing API Key in Header"}, 400
-#         session_status=admin_session.find_one({"api_key":key})
-#         if(session_status==None):
-#             return {"Error":"Invalid API Key"}, 400
-#         return f(*args, **kargs)
-#     return check_session
+def admin_middleware(f):
+    @wraps(f)
+    def check_session(*args,**kwargs):
+        try:
+            key=request.headers['key']
+        except:
+            return {"Error":"Missing API Key in Header"}, 400
+        session_status=admin_session.find_one({"api_key":key})
+        if(session_status==None):
+            return {"Error":"Invalid API Key"}, 400
+        return f(*args, **kwargs)
+    return check_session
         
 @app.route("/adminLogin", methods=["POST"])
 def admin_login():
     admin_data=request.json    
     return admin.admin_login(admin_data["username"],admin_data["password"])
+
+@app.route("/addFlight",methods=["POST"])
+@admin_middleware
+def add_flight():
+    flight_data=request.json
+    return admin.add_flight(flight_data["flightid"],flight_data['flightname'],flight_data['date'])
 
 
 
@@ -35,7 +44,7 @@ def admin_login():
 
 
 @app.route("/protected")
-@admin.admin_middleware
+@admin_middleware
 def protected():
     return "hello"
 
